# LayoutWatcher

./: .gitmodules  CMakeLists.txt  FallbackX11.cpp  FallbackX11.h  LICENSE  LayoutWatcher.cpp  LayoutWatcher.h  LayoutWatcher_global.h  README.md
fallbacks/: FallbackX11.cpp  FallbackX11.h
